--- a/radio/src/translations/de.h.txt
+++ b/radio/src/translations/de.h.txt
@@ -1,4 +1,4 @@
-/*   German checked 04.04.2014 Test 012 kleine Änderungen 
+/*   German checked 12.04.2014 Test 012 kleine Änderungen 
  * Authors (alphabetical order)
  * - Bertrand Songis <bsongis@gmail.com>
  * - Bernet Andre <bernet.andre@gmail.com>
@@ -277,14 +277,14 @@
 #define LEN_FUNCSOUNDS         TR("\004", "\006")
 #define TR_FUNCSOUNDS          TR("Bp1\0""Bp2\0""Bp3\0""Wrn1""Wrn2""Chee""Rata""Tick""Sirn""Ring""SciF""Robt""Chrp""Tada""Crck""Alrm", "Piep1\0""Piep2\0""Piep3\0""Warn1 ""Warn2 ""Cheep ""Ratata""Tick  ""Siren ""Ring  ""SciFi ""Robot ""Chirp ""Tada  ""Crickt""AlmClk")
 
-#define LEN_VTELEMCHNS         "\004"
+#define LEN_VTELEMCHNS         TR("\004", "\005")
 
 #if defined(CPUARM)
-  #define TR_TELEM_RESERVE     "[--]"
-  #define TR_SWR               "SWR\0"
-  #define TR_RX_BATT           "RxBt"
-  #define TR_A3_A4             "A3\0 ""A4\0 "
-  #define TR_A3_A4_MIN         "A3-\0""A4-\0"
+  #define TR_TELEM_RESERVE     TR("[--]", "[---]")
+  #define TR_SWR               TR("SWR\0", "SWR\0 ")
+  #define TR_RX_BATT           TR("RxBt", "RxBat")
+  #define TR_A3_A4             TR("A3\0 ""A4\0 ", "A3\0  ""A4\0  ") 
+  #define TR_A3_A4_MIN         TR("A3\0 ""A4\0 ", "A3\0  ""A4\0  ") 
 #else
   #define TR_TELEM_RESERVE
   #define TR_SWR
@@ -293,9 +293,13 @@
   #define TR_A3_A4_MIN
 #endif
 
-#define TR_ASPD_MAX            "ASp+" 
+#define TR_ASPD_MAX            TR("ASp+", "ASpd+") 
 
-#define TR_VTELEMCHNS          "---\0""Batt""Tmr1""Tmr2" TR_SWR "Tx\0 ""Rx\0 " TR_RX_BATT "A1\0 ""A2\0 " TR_A3_A4 "Alt\0""Rpm\0""Fuel""T1\0 ""T2\0 ""Spd\0""Dist""GAlt""Cell""Cels""Vfas""Curr""Cnsp""Powr""AccX""AccY""AccZ""Hdg\0""VSpd""ASpd""dTE\0" TR_TELEM_RESERVE TR_TELEM_RESERVE TR_TELEM_RESERVE TR_TELEM_RESERVE TR_TELEM_RESERVE "A1-\0""A2-\0" TR_A3_A4_MIN "Alt-""Alt+""Rpm+""T1+\0""T2+\0""Spd+""Dst+" TR_ASPD_MAX "Cel-""Cls-""Vfs-""Cur+""Pwr+" TR_TELEM_RESERVE TR_TELEM_RESERVE TR_TELEM_RESERVE TR_TELEM_RESERVE TR_TELEM_RESERVE "Acc\0""Time"
+#if LCD_W >= 212
+  #define TR_VTELEMCHNS        "---\0 ""Batt\0""Tmr1\0""Tmr2\0" TR_SWR "Tx\0  ""Rx\0  " TR_RX_BATT "A1\0  ""A2\0  " TR_A3_A4 "Alt\0 ""Rpm\0 ""Fuel\0""T1\0  ""T2\0  ""Spd\0 ""Dist\0""GAlt\0""Cell\0""Cells""Vfas\0""Curr\0""Cnsp\0""Powr\0""AccX\0""AccY\0""AccZ\0""Hdg\0 ""VSpd\0""ASpd\0""dTE\0 " TR_TELEM_RESERVE TR_TELEM_RESERVE TR_TELEM_RESERVE TR_TELEM_RESERVE TR_TELEM_RESERVE "A1-\0 ""A2-\0 " TR_A3_A4_MIN "Alt-\0""Alt+\0""Rpm+\0""T1+\0 ""T2+\0 ""Spd+\0""Dst+\0" TR_ASPD_MAX "Cell-""Cels-""Vfas-""Curr+""Powr+" TR_TELEM_RESERVE TR_TELEM_RESERVE TR_TELEM_RESERVE TR_TELEM_RESERVE TR_TELEM_RESERVE "Acc\0 ""Time\0"
+#else
+  #define TR_VTELEMCHNS        "---\0""Batt""Tmr1""Tmr2" TR_SWR "Tx\0 ""Rx\0 " TR_RX_BATT "A1\0 ""A2\0 " TR_A3_A4 "Alt\0""Rpm\0""Fuel""T1\0 ""T2\0 ""Spd\0""Dist""GAlt""Cell""Cels""Vfas""Curr""Cnsp""Powr""AccX""AccY""AccZ""Hdg\0""VSpd""ASpd""dTE\0" TR_TELEM_RESERVE TR_TELEM_RESERVE TR_TELEM_RESERVE TR_TELEM_RESERVE TR_TELEM_RESERVE "A1-\0""A2-\0" TR_A3_A4_MIN "Alt-""Alt+""Rpm+""T1+\0""T2+\0""Spd+""Dst+" TR_ASPD_MAX "Cel-""Cls-""Vfs-""Cur+""Pwr+" TR_TELEM_RESERVE TR_TELEM_RESERVE TR_TELEM_RESERVE TR_TELEM_RESERVE TR_TELEM_RESERVE "Acc\0""Time"
+#endif
 
 #define LENGTH_UNIT_IMP        "ft\0"
 #define SPEED_UNIT_IMP         "mph"
@@ -311,11 +315,11 @@
   #define TR_VTELEMUNIT_IMP    "V\0 ""A\0 ""m/s""-\0 ""kts""ft\0""@\0 ""%\0 ""mA\0""mAh""W\0 "
 #else
   #if defined(IMPERIAL_UNITS)
-    #define LENGTH_UNIT        "ft\0"
-    #define SPEED_UNIT         "kts"
+    #define LENGTH_UNIT        LENGTH_UNIT_IMP
+    #define SPEED_UNIT         SPEED_UNIT_IMP
   #else
-    #define LENGTH_UNIT        "m\0 "
-    #define SPEED_UNIT         "Kmh"
+    #define LENGTH_UNIT        LENGTH_UNIT_METR
+    #define SPEED_UNIT         SPEED_UNIT_METR
   #endif
   #define LEN_VTELEMUNIT       "\003"
   #define TR_VTELEMUNIT        "V\0 ""A\0 ""m/s""-\0 " SPEED_UNIT LENGTH_UNIT "@\0 ""%\0 ""mA\0""mAh""W\0 "
@@ -480,14 +484,14 @@
 #define TR_FADEIN              "Langs. Ein"
 #define TR_FADEOUT             "Langs. Aus"
 #define TR_DEFAULT             "(Normal)"
-#define TR_CHECKTRIMS          "\006Trims\012Prüfen"
-#define OFS_CHECKTRIMS         (9*FW)
+#define TR_CHECKTRIMS          CENTER"\006Trims\012Prüfen"
+#define OFS_CHECKTRIMS         CENTER_OFS+(9*FW)
 #define TR_SWASHTYPE           TR("Typ Taumelsch","Typ Taumelscheibe")
 #define TR_COLLECTIVE          TR("Kollekt.Pitch","Kollekt. Pitch Kanal")
-#define TR_SWASHRING           TR("Zykl. Begrenz","Zyklische Begrenzung")
-#define TR_ELEDIRECTION        TR("Nick Richtung","   Nick Servo Richtung")
-#define TR_AILDIRECTION        TR("Roll Richtung","   Roll Servo Richtung") 
-#define TR_COLDIRECTION        TR("Pit. Richtung","  Pitch Servo Richtung") 
+#define TR_SWASHRING           TR("Zykl. Begrenz","Zykl. Kreis Begrenz.")
+#define TR_ELEDIRECTION        TR("Nick Richtung","Nick Servo Richtung")
+#define TR_AILDIRECTION        TR("Roll Richtung","Roll Servo Richtung") 
+#define TR_COLDIRECTION        TR("Pit. Richtung","Pitch Servo Richtung") 
 #define TR_MODE                INDENT"Modus"
 #define TR_NOFREEEXPO          "Expos voll!"
 #define TR_NOFREEMIXER         "Mischer voll!"
@@ -513,12 +517,12 @@
 #define TR_MIXER               "MISCHER"
 #define TR_CV                  "KV"
 #define TR_GV                  "GV"
-#define TR_ACHANNEL            "A\004Kanal  "
-#define TR_RANGE               INDENT"Skala"
+#define TR_ACHANNEL            "A\004Kanal gemessen =>"
+#define TR_RANGE               INDENT"Messbereich"
 #define TR_BAR                 "Streifen"
 #define TR_ALARM               INDENT"Alarm"
-#define TR_USRDATA             "Daten berechnen--"
-#define TR_BLADES              INDENT"Blätter"
+#define TR_USRDATA             "Daten berechnen aus"
+#define TR_BLADES              INDENT"Prop-Blätter"
 #define TR_SCREEN              "Telm-Bild "
 #define TR_SOUND_LABEL         "----Töne---------"
 #define TR_LENGTH              INDENT"Dauer"
@@ -548,7 +552,7 @@
 #define TR_POTWARNING          TR("Pot Warn.", INDENT "Poti Warnung")
 #define TR_TIMEZONE            TR("Zeitzone","GPS Zeit Zone")
 #define TR_RXCHANNELORD        TR("Kanalanordnung","Kanalvoreinstellung")
-#define TR_SLAVE               "Schüler PPM1-16 als Ausgang"
+#define TR_SLAVE               TR("Schüler PPM1-16","Schüler PPM1-16 als Ausgang")
 #define TR_MODESRC             " Modus\002% Quelle"
 #define TR_MULTIPLIER          "Multiplikator"
 #define TR_CAL                 "Kal."
@@ -598,7 +602,7 @@
 #define TR_MENUDIAG            TR("Schalt.","Schalter Test")
 #define TR_MENUANA             "Analog Test"
 #define TR_MENUCALIBRATION     TR("KALIB. ANALOG","KALIBRIERUNG STICKS+POTIS")
-#define TR_TRIMS2OFFSETS       "Kopie Trim to Servo-Subtrim"  // "Trims => Offset"
+#define TR_TRIMS2OFFSETS       "Kopie Trim to Servo-Mitte"  // "Trims => Offset"
 #define TR_MENUMODELSEL        TR("MODELLE","MODELL WÄHLEN")
 #define TR_MENUSETUP           TR("KONF.","MODELL EINSTELLUNGEN")
 #define TR_MENUFLIGHTPHASE     "FLUGPHASE"
@@ -750,27 +754,27 @@
 #define TR_MODELIDUSED         TR("ID schon benutzt","Modell ID schon benutzt")
 #define TR_MODULE              INDENT "Modul-Typ"
 #define TR_CHANNELRANGE        INDENT "Ausgangs Kanäle"
-#define TR_LOWALARM            INDENT "Low Alarm"
+#define TR_LOWALARM            INDENT "Vor-Alarm bei"
 #define TR_CRITICALALARM       INDENT "Kritisch Alarm"
 #define TR_ENABLE_POPUP        "Enable Popup"
 #define TR_DISABLE_POPUP       "Disable Popup"
-#define TR_CURVE_PRESET        "Preset..."
+#define TR_CURVE_PRESET        "Gerade 0 11 22 33 45"
 #define TR_PRESET              "Preset"
-#define TR_MIRROR              "Mirror"
-#define TR_CLEAR               "Clear"
+#define TR_MIRROR              "Spiegeln"
+#define TR_CLEAR               "Löschen"
 #define TR_RESET               "Reset Servowerte"
-#define TR_RESET_SUBMENU       "Reset..."
+#define TR_RESET_SUBMENU       "Reset=>Timer Flug Telem"
 #define TR_COUNT               "Punkte"
 #define TR_PT                  "Pt"
 #define TR_PTS                 "Pts"
 #define TR_SMOOTH              "Runden"
-#define TR_COPY_TRIMS_TO_OFS   "Kopie Trim to Servo-Subtrim"  // "Trims => Offset"
+#define TR_COPY_TRIMS_TO_OFS   "Kopie Trim to Servo-Mitte"  // "Trims => Offset"
 #define TR_PERSISTENT_MAH      INDENT "Speichern mAh"
 #define TR_PREFLIGHT           "----Preflight Checks----"
 #define TR_CHECKLIST           INDENT "Display Checklist"
 #define TR_FAS_OFFSET          TR(INDENT "FAS Ofs", INDENT "FAS Offset")
 #define TR_UART3MODE           "Serial Port"
-#define TR_SCRIPT              "Script"
+#define TR_SCRIPT              "Lua-Script"
 #define TR_INPUTS              "Inputs"
 #define TR_OUTPUTS             "Outputs"
 
@@ -802,7 +806,7 @@
 
 // Taranis Info Zeile Anzeigen
 #define TR_PHASES_HEADERS      { " Name ", " Schalter ", " Seite Trim ", " Höhe Trim ", " Gas Trim ", " Quer Trim ", " Fade In ", " Fade Out " }
-#define TR_LIMITS_HEADERS      { " Name ", " Subtrim ", " Min ", " Max ", " Richtung ", " Kurve ", " PPM Mitte ", " Subtrim Mode " }
+#define TR_LIMITS_HEADERS      { " Name ", " Mitte ", " Min ", " Max ", " Richtung ", " Kurve ", " PPM Mitte ", " Mitte Mode " }
 #define TR_CSW_HEADERS         { " Funktion ", " Var1 ", " Var2 ", " Var2 ", " UND Schalter ", " Dauer ", " Verzögerung " }
 
 //Taranis About screen
@@ -848,7 +852,7 @@
 #endif
 
 #define TR_ABOUT_PARENTS_1     "Vorgänger-Projekte"
-#define TR_ABOUT_PARENTS_2     "ersky9x (Mike Blandford)"
+#define TR_ABOUT_PARENTS_2     "Ersky9x (Mike Blandford)"
 #define TR_ABOUT_PARENTS_3     "ER9X (Erez Raviv)"
 #define TR_ABOUT_PARENTS_4     "TH9X (Thomas Husterer)"
 
@@ -865,8 +869,8 @@
 
 #define TR_TOP_BAR             "----Info Zeile----"
 #define TR_ALTITUDE            INDENT "Höhe"
-#define TR_SCALE               "Scale"
-#define TR_VIEW_CHANNELS       "View Channels"
-#define TR_VIEW_NOTES          "View Notes"
+#define TR_SCALE               "Skalliere"
+#define TR_VIEW_CHANNELS       "Zeige Kanäle"
+#define TR_VIEW_NOTES          "Zeige Notes"
 #define TR_MODS_FORBIDDEN      "Veränderungen verboten!"
 #define TR_UNLOCKED            "Entsperrt"
