--- a/radio/src/translations/en.h.txt
+++ b/radio/src/translations/en.h.txt
@@ -505,6 +505,7 @@
 #define TR_OFFSET              INDENT "Offset"
 #define TR_TRIM                "Trim"
 #define TR_DREX                "DRex"
+#define DREX_CHBOX_OFFSET      30
 #define TR_CURVE               "Curve"
 #define TR_FLMODE              TR("Mode","Modes")
 #define TR_MIXWARNING          "Warning"
