--- a/radio/src/translations/pt.h.txt
+++ b/radio/src/translations/pt.h.txt
@@ -501,6 +501,7 @@
 #define TR_OFFSET              INDENT"Desvio"
 #define TR_TRIM                "Trim"
 #define TR_DREX                "DRex"
+#define DREX_CHBOX_OFFSET      30
 #define TR_CURVE               "Curvas"
 #define TR_FLMODE              "Fase"
 #define TR_MIXWARNING          "Aviso"
