--- a/radio/src/translations/se.h.txt
+++ b/radio/src/translations/se.h.txt
@@ -501,6 +501,7 @@
 #define TR_OFFSET              INDENT"Offset"
 #define TR_TRIM                "Trim"
 #define TR_DREX                "DRex"
+#define DREX_CHBOX_OFFSET      30
 #define TR_CURVE               "Kurva"
 #define TR_FLMODE              TR("Läge","Flyglägen")
 #define TR_MIXWARNING          "Varning"
