--- a/radio/src/translations/cz.h.txt
+++ b/radio/src/translations/cz.h.txt
@@ -773,6 +773,7 @@
 #define TR_SCRIPT              "Skript"
 #define TR_INPUTS              "Vstupy"
 #define TR_OUTPUTS             "Výstupy"
+#define TR_EEBACKUP            "\004[ENTER Long] to backup the EEPROM"
 
 #if defined(MAVLINK)
   #define TR_MAVLINK_RC_RSSI_SCALE_LABEL        "Max RSSI"
