--- a/radio/src/translations/fr.h.txt
+++ b/radio/src/translations/fr.h.txt
@@ -773,6 +773,7 @@
 #define TR_SCRIPT              "Script"
 #define TR_INPUTS              "Entrées"
 #define TR_OUTPUTS             "Sorties"
+#define TR_EEBACKUP            "\004[ENTER Long]: Sauvegarder l'EEPROM"
 
 #if defined(MAVLINK)
   #define TR_MAVLINK_RC_RSSI_SCALE_LABEL  "RSSI Max"
