--- a/radio/src/translations/fr.h.txt
+++ b/radio/src/translations/fr.h.txt
@@ -641,8 +641,8 @@
 #define TR_SHUTDOWN            "ARRET EN COURS"
 #define TR_BATT_CALIB          "Calib. Batterie"
 #define TR_CURRENT_CALIB       "Calib. Courant"
-#define TR_VOLTAGE             INDENT "Tension"
-#define TR_CURRENT             INDENT "Courant"
+#define TR_VOLTAGE             TR(INDENT "Tension",INDENT "Source Tension")
+#define TR_CURRENT             TR(INDENT "Courant",INDENT "Source Courant")
 #define TR_SELECT_MODEL        "Sélect. Modèle"
 #define TR_CREATE_MODEL        "Créer Modèle"
 #define TR_COPY_MODEL          "Copier Modèle"
