--- a/radio/src/translations/en.h.txt
+++ b/radio/src/translations/en.h.txt
@@ -546,6 +546,7 @@
 #define TR_BLDELAY             INDENT "Duration"
 #define TR_BLONBRIGHTNESS      INDENT "ON Brightness"
 #define TR_BLOFFBRIGHTNESS     INDENT "OFF Brightness"
+#define TR_BLCOLOR             INDENT "Color"
 #define TR_SPLASHSCREEN        "Splash screen"
 #define TR_THROTTLEWARNING     TR("T-Warning", INDENT "Throttle State")
 #define TR_SWITCHWARNING       TR("S-Warning", INDENT "Switch Positions")
