--- a/radio/src/translations/pl.h.txt
+++ b/radio/src/translations/pl.h.txt
@@ -542,6 +542,7 @@
 #define TR_BLDELAY             INDENT"Czas trwania"
 #define TR_BLONBRIGHTNESS      INDENT"Jasnośc wł."
 #define TR_BLOFFBRIGHTNESS     INDENT"Jasność wył."
+#define TR_BLCOLOR             INDENT "Color"
 #define TR_SPLASHSCREEN        "Logo ekranu"
 #define TR_THROTTLEWARNING     TR("(\043)Gaz", INDENT "(\043)Gaz")
 #define TR_SWITCHWARNING       TR("(\043)Przełącznik", INDENT "(\043)Przełącznik")
