--- a/radio/src/translations/pt.h.txt
+++ b/radio/src/translations/pt.h.txt
@@ -542,6 +542,7 @@
 #define TR_BLDELAY             INDENT"Tempo Backlight"
 #define TR_BLONBRIGHTNESS      INDENT"ON Brightness"
 #define TR_BLOFFBRIGHTNESS     INDENT"OFF Brightness"
+#define TR_BLCOLOR             INDENT "Color"
 #define TR_SPLASHSCREEN        "Splash screen"
 #define TR_THROTTLEWARNING     TR("Avisa Acel", INDENT "Avisa Acel")
 #define TR_SWITCHWARNING       TR("Avisa Chav", INDENT "Avisa Chav")
