--- a/radio/src/translations/se.h.txt
+++ b/radio/src/translations/se.h.txt
@@ -543,6 +543,7 @@
 #define TR_BLONBRIGHTNESS      INDENT"På Ljusstyrka"
 #define TR_BLOFFBRIGHTNESS     INDENT"Av Ljusstyrka"
 #define TR_SPLASHSCREEN        "Startbild"
+#define TR_BLCOLOR             INDENT "Color"
 #define TR_THROTTLEWARNING     TR("Gasvarning", INDENT "Gasvarning")
 #define TR_SWITCHWARNING       TR("Bryt.varn.", INDENT "Brytarvarning")
 #define TR_POTWARNING          TR("Rattvarn.", INDENT "Rattvarning")
